<resources>
  <string name="app_name">TestAppMike</string>
  <string name="Ingresar">Ingresar</string>
  <string name="correo">Correo electronico</string>
  <string name="contraseña">Contraseña</string>
  <string name="usuario">Usuario o correo electronico</string>
  <string name="acept">Aceptar</string>
  <string name="cancel">Cancelar</string>
  <string name="datos_invaldiso">Datos erroneos</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="fullname">Nombre</string>
  <string name="crear">Crear</string>
  <string name="apellido">Apellido</string>
  <string name="fecha_nacimiento">Fecha de nacimiento</string>
  <string name="numero_documento_identidiad">Numero documento</string>
  <string name="succes_user">Usuario %1$s creado, contraseña %2$s</string>
  <string name="succes_update_user">Usuario %1$s actualizado, contraseña %2$s</string>
  <string name="state_user">%1$s - %2$s</string>
  <string name="descriptiongeneral">Descripcion</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>

</resources>
