<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e3"
    android:fillViewport="true"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#e3e3e3"
      android:orientation="vertical"

      >

    <include
        layout="@layout/layout_toolbar"
        android:id="@+id/toolbar_registro"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        >

      <android.support.design.widget.TextInputLayout
          android:id="@+id/fullnameWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/MaterialTypography.Regular.Subheading"
          >

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            style="@style/MaterialTypography.Regular.Body1"
            />

      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:id="@+id/lastNamePhoneWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/MaterialTypography.Regular.Subheading"
          >

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            style="@style/MaterialTypography.Regular.Body1"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/emailWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/MaterialTypography.Regular.Subheading"
          >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            style="@style/MaterialTypography.Regular.Body1"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/fechaWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/MaterialTypography.Regular.Subheading"
          >

        <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
            android:id="@+id/fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_nacimiento"
            app:dateFormat="dd/MM/yyyy"
            app:maxDate="01/01/2018"
            app:minDate="01/01/1981"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/documentoWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/MaterialTypography.Regular.Subheading"
          >

        <EditText
            android:id="@+id/documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_documento_identidiad"
            android:inputType="number"
            style="@style/MaterialTypography.Regular.Body1"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/passwordWrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/usernameWrapper"
          android:layout_marginTop="4dp"
          style="@style/MaterialTypography.Regular.Subheading"
          >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/contraseña"
            android:inputType="text"
            style="@style/MaterialTypography.Regular.Body1"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/userName_Wrapper"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/usernameWrapper"
          android:layout_marginTop="4dp"
          style="@style/MaterialTypography.Regular.Subheading"
          >

        <EditText
            android:id="@+id/username_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/usuario"
            android:inputType="text"
            style="@style/MaterialTypography.Regular.Body1"
            />

      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/btn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:background="@color/primary_dark"
          android:text="@string/crear"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="@dimen/material_typography_regular_button_text_size"
          style="@style/MaterialTypography.Regular.Button"
          />


    </LinearLayout>

  </LinearLayout>
</ScrollView>
